<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen_s"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

<!--     <include -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="50dp" -->
<!--         layout="@layout/layout_header" /> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="416dp"
        android:layout_weight="0.55"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/alarm_before"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edittext_alar_before"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_edit"
                    android:ems="10"
                    android:hint="1"
                    android:inputType="number"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/dua_after_azan"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:orientation="vertical" >

                <ToggleButton
                    android:id="@+id/toggleBtnDua"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:background="@drawable/setting_toggle_btn_selector"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save_other_setting"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ques_btns_selector"
            android:text="@string/save"
            android:textColor="#e6cb7e"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/adlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>